# crossweb

./: .gitignore  PLUGIN_SPEC.md  README.md  nob.c
android/: settings.gradle
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html
android/app/src/main/c/: CMakeLists.txt  android_bridge.c  ipc.c  ipc.h  plug.c  plug.h
android/app/src/main/c/plugins/fs/: commands.c  error.c
android/app/src/main/c/plugins/keystore/: plugin.c  plugin.h
android/app/src/main/c/plugins/keystore/src/: plugin.h
android/buildSrc/: build.gradle.kts
src/: android_bridge.c  config.h  hotreload.h  hotreload_posix.c  hotreload_windows.c  ipc.c  ipc.h  plug.c  plug.h  webview.c
src/plugins/fs/: commands.h  desktop.c  error.h  lib.c  mobile.c  models.h  plugin.h
src/plugins/fs/permissions/: fs-permissions.json
src/plugins/ipc/: ipc.js
src/plugins/keystore/: index.js
src/plugins/keystore/android/: KeystoreBio.kt  KeystoreManager.kt
src/plugins/keystore/js/: keystore.js
src/plugins/keystore/src/: plugin.c  plugin.h
src_build/: android_build.c  android_build.h  common.c  common.h  config.c  config.h  configurer.c  nob_android.c  nob_cli.c  nob_linux.c  nob_macos.c  nob_openbsd.c  nob_stage2.c  nob_win64_gcc.c  nob_win64_mingw.c  nob_win64_msvc.c  plugins.c  plugins.h  templates.c  templates.h
tauri_examples/android/app/: .gitignore  build.gradle.kts
templates/android/: settings.gradle
templates/android/app/: build.gradle.kts  proguard-rules.pro
web/: package-lock.json
web/src/: main.js
(+27 files in other folders)
